do not use `UserValuesValidator` during `PatchOp` for users

--- a/config.toml
+++ b/config.toml
@@ -2218,17 +2218,17 @@ family_name = 'required'
 # default: 'optional'
 birthdate = 'optional'
 # default: 'optional'
-street = 'optional'
+street = 'required'
 # default: 'optional'
-zip = 'optional'
+zip = 'required'
 # default: 'optional'
-city = 'optional'
+city = 'required'
 # default: 'optional'
-country = 'optional'
+country = 'required'
 # default: 'optional'
-phone = 'optional'
+phone = 'required'
 # default: 'optional'
-tz = 'optional'
+tz = 'required'
 
 [user_values.preferred_username]
 
