--- a/src/api_types/Cargo.toml
+++ b/src/api_types/Cargo.toml
@@ -10,6 +10,7 @@ rauthy-common = { path = "../common" }
 rauthy-error = { path = "../error" }
 
 actix-web = { workspace = true }
+hiqlite = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
 serde = { workspace = true }
