--- a/frontend/.prettierignore
+++ b/frontend/.prettierignore
@@ -11,3 +11,6 @@ node_modules
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+# for some very weird reason, prettier will remove the whole content of this file when formatting it
+src/lib/Template.svelte
