ignore `.prettierrc` for formatting

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,26 +1,28 @@
 {
-	"arrowParens": "avoid",
-	"bracketSameLine": false,
-	"bracketSpacing": true,
-	"endOfLine": "lf",
-	"jsxSingleQuote": false,
-	"objectWrap": "preserve",
-	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
-		}
-	],
-	"plugins": ["prettier-plugin-svelte"],
-	"printWidth": 100,
-	"quoteProps": "consistent",
-	"semi": true,
-	"singleAttributePerLine": true,
-	"singleQuote": true,
-	"svelteAllowShorthand": true,
-	"svelteSortOrder": "none",
-	"trailingComma": "all",
-	"useTabs": true
+    "arrowParens": "avoid",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "endOfLine": "lf",
+    "jsxSingleQuote": false,
+    "objectWrap": "preserve",
+    "overrides": [
+        {
+            "files": "*.svelte",
+            "options": {
+                "parser": "svelte"
+            }
+        }
+    ],
+    "plugins": [
+        "prettier-plugin-svelte"
+    ],
+    "printWidth": 100,
+    "quoteProps": "as-needed",
+    "semi": true,
+    "singleAttributePerLine": true,
+    "singleQuote": true,
+    "svelteAllowShorthand": true,
+    "svelteSortOrder": "none",
+    "trailingComma": "all",
+    "useTabs": true
 }
