prettify the email TS depending on language and timezone

--- a/src/data/Cargo.toml
+++ b/src/data/Cargo.toml
@@ -28,6 +28,7 @@ atrium-common = { workspace = true }
 atrium-identity = { workspace = true }
 atrium-oauth = { workspace = true }
 chrono = { workspace = true }
+chrono-tz = { workspace = true }
 constant_time_eq = { workspace = true }
 cryptr = { workspace = true }
 dotenvy = { workspace = true }
