basic setup for `EmailJob` task should be done

--- a/config.toml
+++ b/config.toml
@@ -1046,25 +1046,36 @@ danger_insecure = true
 # overwritten by: EMAIL_JOBS_ORPHANED_SECONDS
 orphaned_seconds = 300
 
-# Configures the batch size and delay between batches of
-# emails sent one after another. The default is pretty
-# conservative to not have CPU and memory spikes if there is
-# a huge amount of users, and to not overwhelm the SMTP server
-# or reach rate limits.
+# Configures the batch size and delay between batches of users
+# for sending custom emails. The batch size configures the
+# batch of users being retrieved from the DB at once. This means,
+# if you have a filter on your email targets, the total amount
+# of emails sent can be lower of course. Users are filtered
+# on the client side to take the load off the DB.
 #
-# Batch size for sending emails without delay between them.
+# The default is pretty conservative to not have CPU and memory
+# spikes if there is a huge amount of users, and to not overwhelm
+# the SMTP server or reach rate limits.
+# Depending on the speed of your SMTP server, the conservative
+# default will handle ~5000 users in 1 hour. Even if it can
+# take a higher load, be careful with sending too quickly to not
+# trigger spam filters. Only increase throughput if needed.
 #
-# default: 10
+# Note: If any error comes up during a batch, some users from this
+# very batch may get duplicate emails when it is retried after
+# being marked as orphaned.
+#
+# default: 3
 # overwritten by: EMAIL_JOBS_BATCH_SIZE
-batch_size = 10
+batch_size = 3
 #
 # Delay in ms between email batches. If you set this to 0,
 # Rauthy will send out emails as fast as possible. This
 # should be avoided, especially for high user counts.
 #
-# default: 500
+# default: 2000
 # overwritten by: EMAIL_JOBS_BATCH_DELAY_MS
-batch_delay_ms = 500
+batch_delay_ms = 2000
 
 [email.tz_fmt]
 
