--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,12 +50,14 @@ bincode = { version = "2", features = ["serde"] }
 brotli = "8"
 bytes = "1.10"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
-chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
+chrono = { version = "0.4", default-features = false, features = [
+    "clock", "serde", "std"
+] }
 chrono-tz = "0.10.4"
 cidr = "0.3.0"
 constant_time_eq = "0.4.2"
 cron = "0.15"
-cryptr = { version = "0.8", features = ["s3", "streaming"] }
+cryptr = { version = "0.9", features = ["s3", "streaming"] }
 css-color = "0.2"
 deadpool = { version = "0.12", features = ["rt_tokio_1", "serde"] }
 deadpool-postgres = "0.14"
@@ -95,22 +97,26 @@ pulldown-cmark = "0.13"
 rand = "0.9"
 rand_core = { version = "0.9", features = ["std"] }
 rcgen = "0.14.3"
-refinery = { version = "0.8.14", features = ["tokio-postgres"] }
+refinery = { version = "0.9", features = ["tokio-postgres"] }
 regex = "1"
-reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.3", default-features = false, features = [
+    "json", "rustls-tls"
+] }
 ring = "0.17.13"
 rio_api = "0.8.4"
 rio_turtle = "0.8.4"
 rsa = { version = "0.9.3", features = ["serde", "sha2"] }
-ruma = { version = "0.12.0", features = [
-    "client-api-c", "client-ext-client-api", "client-reqwest", "markdown", "rand"
+ruma-client = { version = "0.16.0", features = [
+    "client-api", "reqwest-rustls-webpki-roots"
 ] }
 rusqlite = "0.37"
 rust-embed = "8.5.0"
-rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
+rustls = { version = "0.23", default-features = false, features = [
+    "logging", "std", "tls12", "ring"
+] }
 rustls-pki-types = "1.4.1"
 rustls-pemfile = "2.1.2"
-s3-simple = "0.6"
+s3-simple = "0.7"
 semver = { version = "1.0.19", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -121,16 +127,24 @@ spow = { version = "0.6", features = ["server"] }
 strum = { version = "0.27", features = ["derive"] }
 svg-hush = "0.9.4"
 tar = "0.4.44"
-tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
-time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
+tikv-jemallocator = { version = "0.6", features = [
+    "unprefixed_malloc_on_supported_platforms"
+] }
+time = { version = "0.3", features = [
+    "formatting", "local-offset", "macros", "parsing", "serde"
+] }
 tls-hot-reload = "0.1"
 toml = "0.9"
 tracing = { version = "0.1", features = ["attributes"] }
-tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing"] }
+tracing-subscriber = { version = "0.3", features = [
+    "env-filter", "json", "tracing"
+] }
 tokio = { version = "1", features = ["full"] }
 tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
 tokio-postgres-rustls = { version = "0.13", features = [] }
-utoipa = { version = "5", features = ["actix_extras", "chrono", "openapi_extensions"] }
+utoipa = { version = "5", features = [
+    "actix_extras", "chrono", "openapi_extensions"
+] }
 utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
 validator = { version = "0.20.0", features = ["derive"] }
 wasm-bindgen = "0.2.105"
