--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,19 @@
         "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check": "./node_modules/svelte-check/bin/svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "test": "playwright test",
         "lint": "prettier --check . && eslint .",
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@playwright/test": "^1.25.0",
         "@internationalized/date": "^3.5.5",
+        "@playwright/test": "^1.25.0",
         "@sveltejs/adapter-static": "^3.0.0",
         "@sveltejs/kit": "^2.20.6",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
+        "@swc/core": "^1.11.4",
         "base64-arraybuffer": "^1.0.2",
         "eslint": "^9.21.0",
         "eslint-config-prettier": "^10.0.2",
@@ -25,12 +26,11 @@
         "prettier": "^3.1.0",
         "prettier-plugin-svelte": "^3.2.6",
         "svelte": "^5.4.0",
-        "svelte-check": "^4.0.4",
+        "svelte-check": "^4.3.4",
         "typescript": "^5.5.0",
         "vite": "^7.2.4",
         "vite-plugin-top-level-await": "^1.5.0",
-        "vite-plugin-wasm": "^3.4.1",
-        "@swc/core": "^1.11.4"
+        "vite-plugin-wasm": "^3.4.1"
     },
     "type": "module"
 }
