--- a/.github/workflows/code_style.yaml
+++ b/.github/workflows/code_style.yaml
@@ -17,11 +17,15 @@ jobs:
       image: ghcr.io/sebadob/rauthy-builder:20251203
     steps:
       - uses: actions/checkout@v4
-      - name: npm install
-        working-directory: ./frontend
-        run: npm install
-      - name: Build HTML
-        run: just build-ui
+      - name: Setup
+        run: |
+          just build-wasm
+          
+          cd frontend
+          npm install
+          cd ..
+          
+          just build-ui
       - name: Code Format Backend
         run: cargo fmt --check
       - name: Code Style Backend
