--- a/Dockerfile_builder
+++ b/Dockerfile_builder
@@ -26,7 +26,7 @@ rustup target add x86_64-unknown-linux-gnu
 rustup component add clippy
 rustup component add rustfmt
 
-cargo install just
+cargo install just wasm-pack
 
 EOF
 
