--- a/Dockerfile_builder
+++ b/Dockerfile_builder
@@ -6,13 +6,19 @@ ENV CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER=x86_64-linux-gnu-gcc
 ENV CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
 ENV PKG_CONFIG_ALLOW_CROSS=1
 
+COPY assets/node_setup_builder/node_setup_22.sh .
+
 RUN <<EOF
 #!/bin/bash
 set -e
 
+chmod +x node_setup_22.sh
+./node_setup_22.sh
+rm node_setup_22.sh
+
 apt-get update
 apt-get install -y build-essential clang gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
-  libpam0g-dev librust-libudev-sys-dev npm
+  libpam0g-dev librust-libudev-sys-dev nodejs
 apt-get clean
 
 rustup target add aarch64-unknown-linux-gnu
@@ -20,7 +26,7 @@ rustup target add x86_64-unknown-linux-gnu
 rustup component add clippy
 rustup component add rustfmt
 
-cargo install just
+cargo install just wasm-pack
 
 EOF
 
