update getting started guides + .editorconfig for md

--- a/.editorconfig
+++ b/.editorconfig
@@ -32,6 +32,7 @@ ij_shell_switch_cases_indented = false
 ij_shell_use_unix_line_separator = true
 
 [{*.markdown,*.md}]
+indent_size = 2
 ij_markdown_force_one_space_after_blockquote_symbol = true
 ij_markdown_force_one_space_after_header_symbol = true
 ij_markdown_force_one_space_after_list_bullet = true
